// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index - snapshot renders correctly when delete is not allowed 1`] = `
<div
  className="choiceConfiguration"
>
  <div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-43 MuiIconButton-root-37 MuiPrivateSwitchBase-root-33 MuiRadio-root-28 MuiRadio-colorSecondary-32 RawInputRadio-radioRoot-1 RawInputRadio-customColor-3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-42"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-46"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-36"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
        </span>
        <span
          className="MuiTouchRipple-root-64"
        />
      </span>
    </div>
    <div>
      <div
        className="MuiFormControl-root-6 RawInputContainer-formControl-4 Component-labelContainer-55"
      >
        <label
          className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-56"
        >
          <div />
        </div>
      </div>
      <div
        className="Component-feedbackContainer-58"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-46 Component-arrowIcon-59"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
          />
        </svg>
        <div
          className="MuiFormControl-root-6 RawInputContainer-formControl-4 Component-labelContainer-55 Component-text-57"
        >
          <label
            className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-56"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Feedback
      </label>
      <div>
        <div
          onClick={[Function]}
        >
          <button
            aria-label="Custom Feedback"
            className="MuiButtonBase-root-43 MuiIconButton-root-37"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-42"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-46 MuiSvgIcon-colorPrimary-47"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-64"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`index - snapshot renders correctly when feedback is not allowed 1`] = `
<div
  className="choiceConfiguration"
>
  <div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-43 MuiIconButton-root-37 MuiPrivateSwitchBase-root-33 MuiRadio-root-28 MuiRadio-colorSecondary-32 RawInputRadio-radioRoot-1 RawInputRadio-customColor-3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-42"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-46"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-36"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
        </span>
        <span
          className="MuiTouchRipple-root-64"
        />
      </span>
    </div>
    <div>
      <div
        className="MuiFormControl-root-6 RawInputContainer-formControl-4 Component-labelContainer-55"
      >
        <label
          className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-56"
        >
          <div />
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Delete
      </label>
      <button
        aria-label="delete"
        className="MuiButtonBase-root-43 MuiIconButton-root-37"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-42"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-46"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-64"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`index - snapshot renders correctly with default props 1`] = `
<div
  className="choiceConfiguration"
>
  <div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-43 MuiIconButton-root-37 MuiPrivateSwitchBase-root-33 MuiRadio-root-28 MuiRadio-colorSecondary-32 RawInputRadio-radioRoot-1 RawInputRadio-customColor-3"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-42"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-46"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-36"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
        </span>
        <span
          className="MuiTouchRipple-root-64"
        />
      </span>
    </div>
    <div>
      <div
        className="MuiFormControl-root-6 RawInputContainer-formControl-4 Component-labelContainer-55"
      >
        <label
          className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-56"
        >
          <div />
        </div>
      </div>
      <div
        className="Component-feedbackContainer-58"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-46 Component-arrowIcon-59"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
          />
        </svg>
        <div
          className="MuiFormControl-root-6 RawInputContainer-formControl-4 Component-labelContainer-55 Component-text-57"
        >
          <label
            className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-56"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Feedback
      </label>
      <div>
        <div
          onClick={[Function]}
        >
          <button
            aria-label="Custom Feedback"
            className="MuiButtonBase-root-43 MuiIconButton-root-37"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-42"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-46 MuiSvgIcon-colorPrimary-47"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-64"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-6 RawInputContainer-formControl-4"
    >
      <label
        className="MuiFormLabel-root-21 MuiInputLabel-root-10 MuiInputLabel-formControl-15 MuiInputLabel-animated-18 MuiInputLabel-shrink-17 RawInputContainer-label-5"
        data-shrink={true}
      >
        Delete
      </label>
      <button
        aria-label="delete"
        className="MuiButtonBase-root-43 MuiIconButton-root-37"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-42"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-46"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-64"
        />
      </button>
    </div>
  </div>
</div>
`;
